<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="individual">Individual</string>
    <string name="group">Group</string>
    <string name="text_information">Text information</string>
    <string name="individual_menu">Individual menu</string>
    <string name="group_menu">group menu</string>
    <string name="day">Day</string>
    <string name="list">list</string>
    <string name="month">month</string>
    <string name="pie">pie</string>
    <string name="week">week</string>
    <string name="cancel">Cancel</string>
    <string name="optional">(Optional)</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="member_name">Member Name</string>
    <string name="save">save</string>
    <string name="title_activity_individual_detail">individual_detail</string>
    <string name="event_name">Event Name</string>
</resources>
